syntax = "proto3";

option go_package = ".;pb";

package pb;

message ReqPublic {
	oneof one {
		bool blogIndex = 1;
	}
}
