syntax = "proto3";

option go_package = ".;pb";

package pb;

message RspOp {
	oneof one {
		string echo = 1;
	}
}
