syntax = "proto3";

option go_package = ".;pb";

package pb;

import "item.proto";

message RspPublic {
	oneof one {
		ItemList blogIndex = 1;
	}
}
